# beekeeper-qt

./: .clangd  .gitignore  .lsan.supp  CMakeLists.txt  CONTRIBUTING.md  PKGBUILD  README.md  beekeeper.pc.in  cmake_uninstall.cmake.in  cmake_write_install_manifest.cmake
.github/workflows/: bees-packages.yml  build-and-release.yml
cmake/: Doxyfile.in  cmake_uninstall.cmake.in  selinuxmodule.cmake
docs/: CONTRIBUTING.md  DEVELOPMENT.md  README.md  clauses.md  commandmachine.md
include/beekeeper/: beesdmgmt.hpp  btrfsetup.hpp  clauses.hpp  commandmachine.hpp  commandregistry.hpp  debug.hpp  internalaliases.hpp  qt-debug.hpp  supercommander.hpp  superlaunch.hpp  superlaunch.hpp.in  transparentcompressionmgmt.hpp  util.hpp
include/beekeeper/cmakedependentvariables/: helperpath.hpp.in  translationsdir.hpp.in
packaging/: PKGBUILD  beekeeper-qt-9999.ebuild
src/cli/: beekeeperman.cpp  commandregistry.cpp  commandregistry.hpp  handlers.cpp  handlers.hpp
src/cli/commandmachine/: parser.cpp  parser.hpp
src/core/: beesdmgmt.cpp  btrfsetup.cpp  util.cpp
src/core/clauses/: bk-clauses-handlers.cpp  bk-clauses-registry.cpp  bk-clauses.hpp  clauses.cpp  commandregistry.cpp
src/core/management/: beesdmgmt.cpp  btrfsetup.cpp  configfile.cpp  filesystems.cpp  logging.cpp  pidfilemgmt.cpp  transparentcompression.cpp
src/core/utils/: commands.cpp  files.cpp  generics.cpp  metrics.cpp  permissions.cpp  strings.cpp  vectors.cpp
src/gui/: autostartio.cpp  buttonhandlers.cpp  debugconsole.cpp  dedupstatusmanager.cpp  dedupstatusmanager.hpp  entry.desktop  eventfilter.cpp  events.cpp  keyboardnav.cpp  keyboardnav.hpp  logconsole.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp  misc.cpp  refreshfilesystems_helpers.cpp  refreshfilesystems_helpers.hpp  refreshtable.cpp  rootshellthread.cpp  rootshellthread.hpp  setupdialog.cpp  setupdialog.hpp  signalhandlers.cpp  statusdotdelegate.cpp  statusdotdelegate.hpp  tablecheckers.cpp  tablecheckers.hpp  uuidcolumndelegate.cpp  uuidcolumndelegate.hpp
src/gui/delegates/: barmessage.cpp  barmessage.hpp  cpuusagemeter.cpp  cpuusagemeter.hpp  statusdot.cpp  uuidcolumn.cpp
src/gui/help/: helpdialog.cpp  helpdialog.hpp  keyboardnavhelp.cpp  keyboardnavhelp.hpp  texts.cpp  texts.hpp
src/gui/translations/: beekeeper-es.ts  beekeeper-qt.es.ts  beekeeper-qt.ts
src/polkit/: _staticcommander.cpp  _staticcommander.hpp  beekeeper-helper.cpp  beekeeper-helper.hpp  diskwait.cpp  diskwait.hpp  globals.cpp  globals.hpp  masterservice.cpp  masterservice.hpp  multicommander.cpp  multicommander.hpp  org.beekeeper.helper.service.dbus.in  org.beekeeper.helper.service.in  org.beekeeper.policy.in  polkit.cpp  polkit.hpp  socketoperations.cpp  socketoperations.hpp  supercommander.cpp  superlaunch.cpp
src/polkit/burocracy/: beekeeper-qt.service.in  dbus.conf  dbus.service.in  dbush.service.in  helper.service.in  policy.in  selinux.fc.in  selinux.te
src/translations/: beekeeper-qt.es.ts  beekeeper-qt.et.ts  beekeeper-qt.fr.ts  beekeeper-qt.id.ts  beekeeper-qt.ta.ts  beekeeper-qt.ts
tests/: beesdmgmttest.cpp  btrfsls.cpp  parserchecker.cpp  setuppipeline.cpp  supertest.cpp
